# tls13tutorial

fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_cert.rs  fuzz_hs.rs  fuzz_key_share.rs  fuzz_server_hello.rs
src/: extensions.rs  handshake.rs  main.rs  parser.rs  tls_record.rs
