[package]
name = "tls13tutorial-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.tls13tutorial]
path = ".."

[[bin]]
name = "fuzz_target_1"
path = "fuzz_targets/fuzz_target_1.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_key_share"
path = "fuzz_targets/fuzz_key_share.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_server_hello"
path = "fuzz_targets/fuzz_server_hello.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_certificate"
path = "fuzz_targets/fuzz_cert.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_handshake"
path = "fuzz_targets/fuzz_hs.rs"
test = false
doc = false
bench = false
